--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-player": "^2.6.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react.video": "^1.0.14"
   },
   "scripts": {
     "start": "react-scripts start",
