--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.5.0",
-    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-player": "^2.6.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "react.video": "^1.0.14"
+    "react.video": "^1.0.14",
+    "sass": "^1.69.5"
   },
   "scripts": {
     "start": "react-scripts start",
